# TiltedEvolution

./: .clang-format  .dockerignore  .editorconfig  .gitattributes  .gitignore  .gitmodules  .releaserc  BOUNTIES.md  CHANGELOG.md  CODE_GUIDELINES.md  Docker.base  Docker.builder  Dockerfile  Dockerfile.builder  Dockerfile.multiarch  Doxyfile  Easy Build Release.bat  GETTINGSTARTED.md  LICENSE  LICENSE.txt  MakeLinux.cmd  MakeVSLatestProjects.cmd  MakeVSXMakeLatestProjects.cmd  README-ANIMATION-MODS.md  README.md  azure-pipelines.yml  docker-compose.yml  docker-multiarch-build.sh  flake.nix  package-lock.json  package.json  ru.json  sh.exe.stackdump  xmake.lua
.ci/: linux-build.yml  windows-build.yml
.githooks/: commit-msg
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: Bug_report.md  Feature_request.md  fallout-client-bug-report.md  fallout-server-bug-report.md  skyrim-bug-report.md  skyrim-client-bug-report.md  skyrim-server-bug-report.md
.github/workflows/: docker-builder.yml  docker.yml  linux.yml  playable-build.yml  windows-playable-build.yml  windows.yml
.gitmessage/: conventional_commit
Code/: .clang-format  Readme.md  TestMain.cpp  xmake.lua
Code/admin/: AdminApp.cpp  AdminApp.h  Main.cpp  Overlay.cpp  Overlay.h  (+4 more)
Docs/: BuildGuide.md
Libraries/: xmake.lua
Services/server_list/: .dockerignore  Cargo.toml  Dockerfile
Services/server_list/src/: context.rs  main.rs  manager.rs  metrics.rs
Services/tweets/: Cargo.toml  Dockerfile  rustfmt.toml
Services/tweets/src/: context.rs  main.rs  tweet_serve.rs
modules/: version.lua
vs2019/: vs2019.sln
(+2650 files in other folders)
