[package]
name = "server_list"
version = "0.1.0"
authors = ["Maxime Griot <maxime@griot.fr>"]
edition = "2018"

[dependencies]
tokio = { version = "1.12.0", features = ["full"] }
hyper = { version = "0.14.13", features = ["server", "tcp", "http1" ] }
futures-util = "0.3"
url = "2.1"
json = "0.12"
async-std = "*"