[package]
name = "tweet_provider"
version = "0.1.0"
authors = ["Force67 <prelink835@gmail.com>"]
edition = "2018"

[dependencies]
tokio = { version = "1.12.0", features = ["full"] }
hyper = { version = "0.14.13", features = ["full"] }
hyper-tls = { version = "0.5.0" }
futures-util = "0.3"
url = "2.1"
json = "0.12"
async-std = "*"